--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* 
+    下記のURLを参考にして、h1~h6のデフォルトスタイルを設定
+    https://qiita.com/hukuryo/items/da135e7de3e496d94803
+*/
+@layer base {
+  h1 {
+    font-size: 2em;
+    font-weight: bold;
+    margin: 10px 0;
+  }
+  h2 {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: 12px 0;
+  }
+  h3 {
+    font-size: 1.17em;
+    font-weight: bold;
+    margin: 12px 0;
+  }
+  h4 {
+    font-size: 1em;
+    font-weight: bold;
+    margin: 12px 0;
+  }
+  h5 {
+    font-size: 0.83em;
+    font-weight: bold;
+    margin: 12px 0;
+  }
+  h6 {
+    font-size: 0.67em;
+    font-weight: bold;
+    margin: 12px 0;
+  }
+}
